[package]
name = "kabletop_sdk"
version = "0.1.0"
authors = ["liyukun@cryptape.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-sdk = "0.40.0"
ckb-types = "0.40.0"
ckb-hash = "0.39.1"
ckb-crypto = "0.40.0"
ckb-jsonrpc-types = "0.40.0"
async-jsonrpc-client = { version = "0.3.0", default-features = false, features = ["http-async-std"] }
futures = "0.3.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
anyhow = "1.0"
toml = "0.5.8"
lazy_static = "1.4.0"
molecule = "0.7.0"
